--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sapi-sdk",
-  "version": "0.0.1",
+  "version": "0.0.11",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -24,6 +24,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^2.0.1",
     "bn.js": "^5.2.2",
     "decimal.js": "^10.5.0",
     "gaussian": "^1.3.0"
